fix image size on mobile

--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ p {
   position: relative;
 }
 
+.center-box img {
+  display:block;
+  margin: auto;
+  max-width: 100%;
+}
+
 #links {
   margin-bottom: 32px;
   min-height: 0px;
